--- a/PositionMove/style.css
+++ b/PositionMove/style.css
@@ -1,36 +1,57 @@
 body{
-    margin: 0;
     box-sizing: border-box;
-    font-size: 40px;
-    user-select: none;
-    overflow: hidden;
+    font-size: 20px;
+    margin: 0;
+    /* user-select: none;
+    overflow: hidden; */
+    width: 100vw;
+    height: 100vh; 
+}
+.MainText{
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 30px 0;
+    height: 10vh;
 }
 .layout{
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
-    justify-content: space-around;
-    width: 100vw;
-    height: 100vh;
+    align-items: center;
+    justify-content: space-between;
+    
     
 }
 .crowimg{
     width: 300px;
     height: 300px;
     position: absolute;
-    top:33vh;
-    left:40vw;
+    top:30vh;
+    left:15vw;
 }
-.box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 30px;
-}
+
 .btn{
     cursor: pointer;
-    font-size: 1.5em;
+    font-size: 3em;
+    position: absolute;
+    top:80vh;
+    left:20vw;
 }
-.text{
-    margin: 30px;
+
+.box{
+    display: flex;
+    
+}
+
+.first{
+    margin-right: 100px;
+}
+.second{
+    
+}
+.infobox{
+    display: flex;
+    width: fit-content;
+    height: fit-content;
+    margin-right: 100px;
+
 }
